apps/base/stream-jellyfin/deploy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: stream-jellyfin
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
