apps/base/stream-jellyfin/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
spec:
  ports:
  - port: 80
    targetPort: 8096
  selector:
    app.kubernetes.io/name: jellyfin
    app.kubernetes.io/component: jellyfin
