apps/base/stream-jellyfin/deploy/networkPolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-to-jellyfin
spec:
  policyTypes: [Ingress]

  podSelector:
    matchLabels:
      app.kubernetes.io/name: jellyfin
      app.kubernetes.io/component: jellyfin

  ingress:
    # Allow from the ingress controller
    - ports:
        - port: jellyfin
      from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
          podSelector:
            matchLabels:
              app.kubernetes.io/name: ingress-nginx

    # Allow http from the homepage (to enable the widget)
    - ports:
        - port: jellyfin
      from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: tool-homepage
          podSelector:
            matchLabels:
              app.kubernetes.io/name: homepage
              app.kubernetes.io/component: homepage
